more fixed menu-table text-align css

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
   max-width: 740px;
 }
 #menu-table {
+  text-align: left;
   background-color: #f2f2f2;
   width: 100%;
 }
